# knowledge-bot-telegram

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
data/: .gitignore
devtools/: cli_bot.py  seed_database.py
src/knowledge_bot_telegram/: __init__.py  chat.py  embedder.py  llm.py  prompts.yaml  schemas.py  vector_search.py
